# stellar-proyecto-tarea2

./: .gitignore  package-lock.json  package.json  test.js
IMG/: ejercicio1.txt
JavaScript-SDK/: consultar-balance.js  crear-cuenta.js  enviar-pago.js  package-lock.json  package.json  resultado-ejercicio2.txt
hola_rust/: Cargo.toml
proyectos-soroban/hello-tiburona/: Cargo.toml
proyectos-soroban/hello-tiburona/contracts/hello-tiburona/: Cargo.toml
proyectos-soroban/hello-tiburona/contracts/hello-tiburona/src/: lib.rs
proyectos-soroban/hello-tiburona/contracts/hello-tiburona/test_snapshots/test/: test_hello_exitoso.1.json  test_reset_solo_admin.1.json
